# Blurring-as-a-Service

./: .amlignore  .flake8  .gitignore  .gitmodules  .mypyrc  .pre-commit-config.yaml  README.md  aml-config.example.yml  bandit.yaml  blur-env-cuda11.8.Dockerfile  blur-environment.Dockerfile  config.example.yml  config.yml  copy_from_cloudvps.sh  create_dataset_from_locations.py  database.example.json  database.json  pipeline_validation.py  pre_inference.sh  pyproject.toml  remove_unannoted_images.py  run_training.py  run_training_on_sample.py  run_validation.py
.github/: pull_request_template.md
amla_toolkit/: __init__.py  aml_interface.py  connection_details_example.yml
azure_scripts/: run_create_dataset_from_locations.py  run_training.py
blurring_as_a_service/: __init__.py
blurring_as_a_service/check_corrupted_images/: submit_check_corrupted_images_pipeline.py
blurring_as_a_service/cleaning_pipeline/: submit_cleaning_pipeline.py
blurring_as_a_service/create_aml_environment/: blur-environment.Dockerfile  create_azure_env.py  create_training_env_old_sdk.py
blurring_as_a_service/endpoint/: submit_endpoint.py  test_endpoint.py
blurring_as_a_service/inference_pipeline/: submit_inference_pipeline.py
blurring_as_a_service/inference_pipeline_parallel/: submit_inference_pipeline.py
blurring_as_a_service/metadata_pipeline/: submit_metadata_pipeline.py
blurring_as_a_service/metrics/: custom_metrics_calculator.py  fnr_calculator.py  metrics_utils.py  total_blurred_area.py  upper_blurred_area.py  yolo_labels_dataset.py
blurring_as_a_service/move_data_pipeline/: submit_move_pipeline.py
blurring_as_a_service/performace_evaluation_pipeline/: submit_performance_evaluation_pipeline.py
blurring_as_a_service/pre_inference_pipeline/: submit_pre_inference_pipeline.py
blurring_as_a_service/settings/: attr_dict.py  flags.py  settings.py  settings_helper.py  settings_schema.py
blurring_as_a_service/training_pipeline/: create_training_env_old_sdk.py  submit_training_pipeline.py
blurring_as_a_service/utils/: aml_interface.py  azure_coco_to_coco_converter.py  azure_coco_to_yolo_converter.py  bias_category_mapper.py  coco_to_yolo_converter.py  constants.py  generics.py  lock_file.py  logging_handler.py  yolo_labels_dataset.py
blurring_as_a_service/workload_distribution_pipeline/: submit_workload_distribution_pipeline.py
dashboard/: BaaS_monitoring.json  BaaS_monitoring.workbook
data/: annotations.json  eda.md  locations.csv  pano.yaml
data-config/: pano-sample.yaml  pano.yaml
data-prep/: eda.md
data-prep/diana/: annotations_utils.py  test.py  utils.py
data-prep/laurens/: blur-environment  create_dataset_from_locations.py  remove_unannoted_images.py
data/prep-diana/: utils.py
docs/: performance_evaluation_pipeline.md
draw-YOLO-box/: README.md  classes.txt  draw_box.py  get_origin_image.py  name_list.txt
draw-YOLO-box/labels/: TMX7316010203-000317_pano_0000_004941.txt
experiments/: calculate_fnr.py
experiments/exp_with_tagged_validation_21feb/: calculate_tba.py  tba_results.md  tba_summary_with_alpha_1.5.md  tba_summary_with_alpha_1.md  tba_summary_with_alpha_1_pred_mask_everywhere.md  tba_summary_with_alpha_2.md
local_test_data/sample/: azure-coco-format-for-sample-validation.json  coco_format_sample_val.json
metrics/: calculate_metrics.py  evaluation_per_size.py  metrics_utils.py  total_blurred_area.py  utils.py
tests/metrics/: test_total_blurred_area.py  test_utils.py
tests/unit/: test_azure_coco_to_coco_converter.py  test_calculate_tba.py  test_coco_to_yolo_converter.py  test_custom_metrics_calculator.py  test_fnr_calculator.py  (+3 more)
yolo-configs/: pano-sample.yaml
(+199 files in other folders)
