[project]
name = "blurring_as_a_service"
version = "2.0.0"
description = ""
authors = [
    {name = "Sebastian Davrieux", email = "s.davrieux@amsterdam.nl"},
    {name = "Diana Epureanu", email = "d.epureanu@amsterdam.nl"},
    {name = "Andrea Lombardo", email = "a.lombardo@amsterdam.nl"},
    {name = "Daan Bloembergen", email = "d.bloembergen@amsterdam.nl"},
    {name = "Chris Eijgenstein", email = ""},
]
maintainers = [
    { name = "Computer Vision Team, Gemeente Amsterdam", email = "cvt@amsterdam.nl" },
]
requires-python = ">=3.8, <=3.12"
dependencies = [
    "aml_interface",
    "cvtoolkit",
    "yolo_model_development_kit",
    "azure-cli>=2.67.0",
    "psycopg2>=2.9.10",
    "azureml-core>=1.59.0",
]

[tool.uv.sources]
torch = { index = "pytorch" }
aml_interface = { git = "https://github.com/Computer-Vision-Team-Amsterdam/AML-Interface.git", branch = "feature/Updating_logs_library" }
cvtoolkit = { git = "https://github.com/Computer-Vision-Team-Amsterdam/CVToolkit.git", tag = "v2.0.4" }
yolo_model_development_kit = { git = "https://github.com/Computer-Vision-Team-Amsterdam/YOLO-model-development-kit.git", branch = "fix/Package_version" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
explicit = true


[tool.isort]
profile = "black"
multi_line_output = 3
