[project]
name = "blurring_as_a_service"
version = "2.2.0"
description = ""
authors = [
    {name = "Sebastian Davrieux", email = "s.davrieux@amsterdam.nl"},
    {name = "Diana Epureanu", email = "d.epureanu@amsterdam.nl"},
    {name = "Andrea Lombardo", email = "a.lombardo@amsterdam.nl"},
    {name = "Daan Bloembergen", email = "d.bloembergen@amsterdam.nl"},
    {name = "Chris Eijgenstein", email = ""},
]
maintainers = [
    { name = "Computer Vision Team, Gemeente Amsterdam", email = "cvt@amsterdam.nl" },
]
requires-python = ">=3.10, <=3.12"
dependencies = [
    "yolo_model_development_kit",
    "azure-cli>=2.67.0",
    "psycopg2>=2.9.10",
    "azureml-core>=1.59.0",
    "azureml-inference-server-http>=1.4.0",
]

[tool.uv]
prerelease = "allow"

[tool.uv.sources]
yolo_model_development_kit = { git = "https://github.com/Computer-Vision-Team-Amsterdam/YOLO-model-development-kit.git", tag = "v1.4.6" }

[tool.isort]
profile = "black"
multi_line_output = 3
